--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="parallax" id="parallax-cta" style="background-image:url(https://www.solodev.com/assets/pricing/company-hero.jpg);">
+                    <div class="parallax" id="parallax-cta" style="background-image:url(images/company-hero-1.jpg);">
                         &nbsp;
                     </div>
                 </section>
