--- a/pricing.html
+++ b/pricing.html
@@ -9,8 +9,10 @@
    <div class="container">
       <div class="row product-title-info">
          <div class="col-md-12">
+            <center>
+               <img alt="WebCorpCo" class="graphic-logo" src="images/logo.png">
+            </center>
             <h1>
-               WEBCORPCO<br>
                PRICING
             </h1>
          </div>
