--- a/pricing.html
+++ b/pricing.html
@@ -37,7 +37,7 @@
 
 					<a class="button orange-button outbound" href="" target="_blank">Buy Personal</a>
 				</div>
-				<div class="item-details-block" style="height: 525px;">
+				<div class="item-details-block">
 					<div class="plus-header">Includes the following features:</div>
 					<div class="separator"></div>
 					<ul>
@@ -69,7 +69,7 @@
 
 					<a class="button orange-button outbound" href="" target="_blank">Buy Pro</a>
 				</div>
-				<div class="item-details-block" style="height: 525px;">
+				<div class="item-details-block">
 					<div class="plus-header">Includes the following features:</div>
 					<div class="separator"></div>
 				<ul>
@@ -101,7 +101,7 @@
 
 					<a class="button orange-button outbound" href="" target="_blank">Buy Enterprise</a>
 				</div>
-				<div class="item-details-block" style="height: 525px;">
+				<div class="item-details-block">
 					<div class="plus-header">Includes the following features:</div>
 					<div class="separator"></div>
 				<ul>
